# pycopancore

./: .flake8  .gitignore  .project  .pydevproject  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  maxlpoit_model.html  moduletest.py  moduletest_exploit.py  our-model-result0.html  our-model-result5.html  pyproject.toml  pytest.ini  setup.py  slurm.jcf
codevonnils/: Cluster_Utils.py  create_everything.py  display_network.py
create_graph/: create_country_database.py  create_everything.py  display_network.py
docs/: .gitignore  Makefile  __init__.py  api_reference.rst  conf.py  index.fdb_latexmk  index.fls  index.rst  introduction.rst  license.rst  step_by_step.rst
examples/: __init__.py
graphics/: uml_diagram.zargo
models/: .simple_model.py.swp  simple_model.py
pycopancore/: __init__.py  __init__.py~  abstract_model.py  anthroposphere.py  config.py  ecosphere.py  first_model.py  global_stocks.py  integrator.py  interface.py  local_stocks.py  macro_agents.py  micro_agents.py
scripts/: release.sh  update_citation.py
studies/: .gitignore  _template.py  alarm.py  cluster_run_exodus.py  coccon_tutorial.py  configurate_maxploit.py  configuration  example1.py  go_to_results_link  jobst2leander.py  load_pickle.py  maxploit_test_config.json  mc.bat  moduletest.py  nohup.out  pik_challenge2_produce_data.py  pikchallenge2_readandplotdata.py  plot_a_mofa.py  plot_example1.py  plot_example2.py  plot_example2_mw.py  plot_figure5.py  plot_jobst2leander.py  plot_jobst2leander_mw.py  plot_jobsts_prototype_1.py  plot_maxploit.py  plot_maxploit_functions.py  plot_maxploit_mofa.py  plot_maxploit_mofa_cluster.py  plot_maxploit_mofa_local.py  plot_mc_exploit.py  plot_mc_maxploit.py  plot_multilayer.py  post_process_mofa.py  prof_out.prof  prof_out2  prof_out2.prof  run_BBC_2.py  run_BBC_final.py  run_a_mofa.py  (+37 more)
template/: README.md  model.py  run.py
tests/: __init__.py  abstract_cell_test.py  conftest.py  test_abstract_cell.py  test_base_cell.py  test_basic_functionality.py  test_core_functionality.py  test_data_model.py  test_donut_world.py  (+7 more)
(+1077 files in other folders)
